--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.4.6
   firebase_core: ^1.21.1
   firedart: ^0.9.0+1
   flutter:
