--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ environment:
 dependencies:
   cloud_firestore: ^3.4.6
   firebase_core: ^1.21.1
+  firebase_auth: 3.3.20
+  json_annotation: ^4.6.0
   firedart: ^0.9.0+1
+  rxdart: ^0.27.5
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -23,6 +26,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  build_runner: 2.1.11
+  json_serializable: ^6.3.1
 
 flutter:
   uses-material-design: true
